deploy/manifests/dev/awscli-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: awscli
  labels:
    app: awscli
spec:
  serviceAccountName: prioritized-agenda-api
  containers:
    - name: awscli
      image: amazon/aws-cli
      command:
        - "sleep"
        - "604800"
      imagePullPolicy: IfNotPresent
      resources:
        limits:
          cpu: 1000m
          memory: 1Gi
        requests:
          cpu: 500m
          memory: 512M
  restartPolicy: Always
