deploy/manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prioritized-agenda-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: prioritized-agenda-api-dev.nimbus.amgen.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prioritized-agenda-api
                port:
                  number: 80
